lessons/143-go-golang-vs-node-js-performance-benchmark/monitoring/grafana/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    monitoring: prometheus
