lessons/143-go-golang-vs-node-js-performance-benchmark/monitoring/grafana/8-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
  - name: istio
    namespace: gateway
  hostnames: ["grafana.devopsbyexample.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 3000
